@@ -14,24 +14,12 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-options {
-	directory ".";
-	max-zone-ttl 600;
-};
-
-zone "maxttl1.example" {
+zone a {
 	type master;
-	file "maxttl-bad.db";
+	file "shared.db";
 };
-
-zone "maxttl2.example" {
-	type master;
-	file "maxttl-bad.db";
-	max-zone-ttl 300;
-};
-
-zone "maxttl3.example" {
-	type master;
-	file "maxttl-bad.db";
-	max-zone-ttl 120;
+zone b {
+	type slave;
+	file "shared.db";
+	masters { 1.2.3.4; };
 };
